--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.8.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
