--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,14 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' blob: https://js.clerk.com https://*.clerk.com https://*.clerk.dev; worker-src 'self' blob:; child-src 'self' blob:;"
+        }
+      ]
+    }
+  ]
 }
