--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -6,7 +6,7 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' blob: https://js.clerk.com https://*.clerk.com https://*.clerk.dev https://*.clerk.accounts.dev https://*.clerk.accounts.com; script-src-elem 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' blob: https://js.clerk.com https://*.clerk.com https://*.clerk.dev https://*.clerk.accounts.dev https://*.clerk.accounts.com; worker-src 'self' blob:; child-src 'self' blob:;"
+          "value": "script-src 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' blob: https://js.clerk.com https://*.clerk.com https://*.clerk.dev https://*.clerk.accounts.dev https://*.clerk.accounts.com https://cdn.paddle.com https://*.paddle.com; script-src-elem 'self' 'wasm-unsafe-eval' 'inline-speculation-rules' blob: https://js.clerk.com https://*.clerk.com https://*.clerk.dev https://*.clerk.accounts.dev https://*.clerk.accounts.com https://cdn.paddle.com https://*.paddle.com; worker-src 'self' blob:; child-src 'self' blob: https://*.paddle.com; frame-src 'self' https://*.paddle.com;"
         }
       ]
     }
